; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_tbar.c_RefreshToolbarDrive.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_tbar.c_RefreshToolbarDrive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hwndDriveList = common dso_local global i32 0, align 4
@CB_GETCURSEL = common dso_local global i32 0, align 4
@CB_DELETESTRING = common dso_local global i32 0, align 4
@rgiDrive = common dso_local global i64* null, align 8
@CB_INSERTSTRING = common dso_local global i32 0, align 4
@CB_SETCURSEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RefreshToolbarDrive(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %6 = load i32, i32* @hwndDriveList, align 4
  %7 = load i32, i32* @CB_GETCURSEL, align 4
  %8 = call i64 @SendMessage(i32 %6, i32 %7, i32 0, i64 0)
  %9 = trunc i64 %8 to i32
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* @hwndDriveList, align 4
  %11 = load i32, i32* @CB_DELETESTRING, align 4
  %12 = load i64, i64* %3, align 8
  %13 = trunc i64 %12 to i32
  %14 = call i64 @SendMessage(i32 %10, i32 %11, i32 %13, i64 0)
  %15 = load i64*, i64** @rgiDrive, align 8
  %16 = load i64, i64* %3, align 8
  %17 = getelementptr inbounds i64, i64* %15, i64 %16
  %18 = load i64, i64* %17, align 8
  store i64 %18, i64* %5, align 8
  %19 = load i64, i64* %5, align 8
  %20 = call i64 @IsRemovableDrive(i64 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %26, label %22

22:                                               ; preds = %1
  %23 = load i64, i64* %5, align 8
  %24 = call i64 @IsCDRomDrive(i64 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %22, %1
  %27 = load i64, i64* %5, align 8
  %28 = call i32 @U_VolInfo(i64 %27)
  br label %29

29:                                               ; preds = %26, %22
  %30 = load i32, i32* @hwndDriveList, align 4
  %31 = load i32, i32* @CB_INSERTSTRING, align 4
  %32 = load i64, i64* %3, align 8
  %33 = trunc i64 %32 to i32
  %34 = load i64, i64* %5, align 8
  %35 = call i64 @SendMessage(i32 %30, i32 %31, i32 %33, i64 %34)
  %36 = load i32, i32* %4, align 4
  %37 = icmp ne i32 %36, -1
  br i1 %37, label %38, label %43

38:                                               ; preds = %29
  %39 = load i32, i32* @hwndDriveList, align 4
  %40 = load i32, i32* @CB_SETCURSEL, align 4
  %41 = load i32, i32* %4, align 4
  %42 = call i64 @SendMessage(i32 %39, i32 %40, i32 %41, i64 0)
  br label %43

43:                                               ; preds = %38, %29
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i64 @SendMessage(i32, i32, i32, i64) #1

declare dso_local i64 @IsRemovableDrive(i64) #1

declare dso_local i64 @IsCDRomDrive(i64) #1

declare dso_local i32 @U_VolInfo(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
